# cga

./: .gitignore  CMakeLists.txt  Makefile  br.bat  build.bat  cmake_install.cmake  proj-init.bat  readme.md  school_set_paths.bat
src/: cga_core.c  cga_core.h  cga_inputs.h  cga_render.c  cga_render.h  cga_window.c  cga_window.h  font_draw.c  font_draw.h  game.c  game.h  glutil.c  glutil.h  log.c  log.h  main.c
